discussion/kv_engine/124330/124330_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38439: Migrate from boost::optional to std::optional

Change-Id: I872d3685ec614e09eadaa45effedf54901ae2a03

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-03-26 16:32:32.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-03-26 17:01:44.000000000
Message: 
Patch Set 1:

(Note to self: needs couchstore patch merging first).
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-03-26 17:02:38.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27121/ : FAILURE

Compile error at ..\couchstore\src\dbdump.cc(56): error C2653: "boost": is not a class or namespace name ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27121/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23193/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:32:10:
fatal error: "platform/optional.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23193/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25491/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/daemon/stdin_check.cc b/daemon/stdin_check.cc
index bd0b878..7fde98b 100644
--- a/daemon/stdin_check.cc
+++ b/daemon/stdin_check.cc
@@ -1,8 +1,8 @@
 /* -*- Mode: C; tab-width: 4; c-basic-offset: 4; indent-tabs-mode: nil -*- */
 
+#include &lt;unistd.h&gt;
 #include &lt;cstdio&gt;
 #include &lt;cstring&gt;
-#include &lt;unistd.h&gt;
 
 #ifndef WIN32
 #include &lt;sys/poll.h&gt;

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25491/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1375/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/checkpoint_manager.cc:32:10: error: "platform/optional.h" file not found [clang-diagnostic-error]
#include <platform/optional.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:29:10: error: "platform/optional.h" file not found [clang-diagnostic-error]
#include <platform/optional.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vbucket.cc:49:10: error: "platform/optional.h" file not found [clang-diagnostic-error]
#include <platform/optional.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ewouldblock_engine/ewouldblock_engine.cc:1131:50: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
        virtual std::optional<ENGINE_ERROR_CODE> add_to_pending_io_ops() {
        ~~~~~~~~                                 ^
                                                                         override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ewouldblock_engine/ewouldblock_engine.cc:1169:46: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
            std::optional<ENGINE_ERROR_CODE> add_to_pending_io_ops() {
                                             ^
                                                                     override

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1375/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/checkpoint_manager.cc:32:10:
error: "platform/optional.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1375/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1817/ : FAILURE

Compile error at [2020-03-26T16:44:14.693Z] ../couchstore/src/dbdump.cc:56:8:
error: use of undeclared identifier "boost"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1817/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2768/ : FAILURE

Compile error at [2020-03-26T16:53:39.984Z] ../kv_engine/logger/logger.h:58:6:
error: ?optional? in namespace ?std? does not name a template type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2770/ : FAILURE

Compile error at [2020-03-26T16:52:32.594Z] ../kv_engine/logger/logger.h:58:6:
error: ?optional? in namespace ?std? does not name a template type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2770/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2819/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10628/ : FAILURE

Compile error at [2020-03-26T16:56:48.427Z] ../kv_engine/logger/logger.h:58:6:
error: ?optional? in namespace ?std? does not name a template type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10628/ )
----------------------------------------------------------------------------------------------------------------------
